--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="apple-touch-icon"
+      href="//home/unreal/Documentos/Curso de React Avanzado/react avanzado/src/assets/icon.png"
+    />
     <title>React Avanzado BIen :) !!!</title>
   </head>
   <body>
     <div id="app"></div>
+    <noscript><h3>This Page Require JavaScript</h3></noscript>
   </body>
 </html>
