--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,19 @@
   <body>
     <div id="app"></div>
     <noscript><h3>This Page Require JavaScript</h3></noscript>
+    <script>
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", function() {
+          navigator.serviceWorker
+            .register("/service-worker.js")
+            .then(registration => {
+              console.log("SW registrado");
+            })
+            .catch(registrationError => {
+              console.log("SW error", registrationError);
+            });
+        });
+      }
+    </script>
   </body>
 </html>
